vlib/v/checker/tests/unkown_enum_call_err.out
vlib/v/checker/tests/unkown_enum_call_err.vv:8:9: error: unknown enum `HashFnX`
    6 | 
    7 | fn test_main() {
    8 |     assert HashFnX.from_string('sha256') or { HashFn.sha1 } == HashFn.sha256
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 | }
vlib/v/checker/tests/unkown_enum_call_err.vv:8:39: error: unexpected `or` block, the function `HashFnX__static__from_string` does not return an Option or a Result
    6 | 
    7 | fn test_main() {
    8 |     assert HashFnX.from_string('sha256') or { HashFn.sha1 } == HashFn.sha256
      |                                          ~~~~~~~~~~~~~~~~~~
    9 | }
vlib/v/checker/tests/unkown_enum_call_err.vv:8:9: error: assert can be used only with `bool` expressions, but found `void` instead
    6 | 
    7 | fn test_main() {
    8 |     assert HashFnX.from_string('sha256') or { HashFn.sha1 } == HashFn.sha256
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 | }
