vlib/v/checker/tests/unkown_enum_call_err.vv
enum HashFn {
	sha1
	sha256
	sha512
}

fn test_main() {
	assert HashFnX.from_string('sha256') or { HashFn.sha1 } == HashFn.sha256
}
